<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.cleveroad.audiovisualization.GLAudioVisualizationView
                android:id="@+id/visualizer_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:av_backgroundColor="#002A20"
                app:av_bubblesPerLayer="16"
                app:av_bubblesRandomizeSizes="true"
                app:av_bubblesSize="25dp"
                app:av_layersCount="4"
                app:av_wavesColors="@array/rainbow"
                app:av_wavesCount="50"
                app:av_wavesFooterHeight="170dp"
                app:av_wavesHeight="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/favouriteIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="11dp"
                android:background="@drawable/white_circle_icon"
                android:contentDescription="@string/todo"
                android:src="@drawable/favorite_off"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#1CBBB4"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/songArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/son_tung"
                android:textColor="#eeeeee"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/songTitle" />


            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/songArtist" />

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                app:layout_constraintStart_toStartOf="@+id/seekBar"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="@+id/seekBar"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />


            <ImageButton
                android:id="@+id/previousButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/play_previous_icon"
                android:contentDescription="@string/todo"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintEnd_toStartOf="@+id/nextButton"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/playPauseButton" />

            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/play_next_icon"
                android:contentDescription="@string/todo"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/previousButton"
                app:layout_constraintTop_toTopOf="@+id/playPauseButton" />

            <ImageButton
                android:id="@+id/loopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/loop_white_icon"
                android:contentDescription="@string/todo"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.862"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nextButton" />

            <ImageButton
                android:id="@+id/shuffleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shuffle_white_icon"
                android:contentDescription="@string/todo"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintEnd_toStartOf="@+id/previousButton"
                app:layout_constraintHorizontal_bias="0.537"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/previousButton" />

            <TextView
                android:id="@+id/songTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="marquee"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/Mrmsc"
                android:textColor="#ffffff"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/playPauseButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/play_icon"
                android:contentDescription="@string/todo"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.499"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>